# async-graphql-axum-boilerplate

./: Cargo.toml  README.md
queries/: get-events.sql
src/: main.rs
src/schema/: mod.rs  types.rs
src/schema/event/: mod.rs  resolvers.rs  types.rs
