[package]
name = "share-owl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.7"
async-graphql-axum = "6.0.7"
axum = "0.6.20"
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "postgres", "macros" ] }
tokio = { version = "1.33.0", features = ["full"] }
